# 25RoboCup

./: README.md
0_LINE_RCJ/: 0_LINE_RCJ.ino  1_UART.ino
BLM/motorTest/: motorTest.ino
Echo_UI/: LOGO.xcf  UART.cpp  UART.h  convert.py  image.h
Echo_UI/Echo_UI/: Echo_UI.ino  UART.h  UART.ino  UI.cpp  UI.h  button.cpp  button.h  commands.cpp  commands.h  echo.cpp  sound.cpp  sound.h
Echo_UI/__MACOSX/: ._Echo_UI
HP/: BEOLSAE_X.css  BEOLSAE_X.html  BEOLSAE_X.js  BEOLSAE_home.css  BEOLSAE_home.html
IR基板/IR_Japan_RCJ_2025/: IR.h  IR.ino  IR_Japan_RCJ_2025.ino  UART.h  UART.ino
IR基板/IR_Nord_RCJ_2025/: IR.ino  IR_Nord_RCJ_2025.ino  UART.h  UART.ino
KiCad/: https___qiita-image-store.s3.ap-northeast-1.amazonaws.com_0_3820428_c006f8b6-ff77-428a-a450-1758fea6700b.avif
KiCad/IR_Japan_prot1/: #auto_saved_files#  IR_Japan_prot1 (コピー).kicad_prl  IR_Japan_prot1 (コピー).kicad_pro  IR_Japan_prot1.kicad_pcb  IR_Japan_prot1.kicad_prl  IR_Japan_prot1.kicad_pro  IR_Japan_prot1.kicad_sch  _autosave-IR_Japan_prot1.kicad_sch  fp-info-cache  めも.txt  メインの穴付き.kicad_pcb
KiCad/IR_Japan_prot2/: IR_Japan_prot2.kicad_pcb  IR_Japan_prot2.kicad_prl  IR_Japan_prot2.kicad_pro  IR_Japan_prot2.kicad_sch
KiCad/IR_Japan_prot3/: IR_Japan_prot3.kicad_pcb  IR_Japan_prot3.kicad_prl  IR_Japan_prot3.kicad_sch
RP2040_UART_TESTS/withPIO/UART_RP2040/: CMakeLists.txt  UART_RP2040.ino
UnitV/: Camera_JAPAN.py  Camera_JAPAN.py.autosave  kflash_gui.py  main.py  main.py.autosave  ファームウェアなどメモ.txt
kiCad/: angle.txt  編集中のドキュメント 1
パーカー/: ロゴ回.xcf
写真とメモ/: URAWA_BOLSAE_Logo<<500>>.xcf  ロゴ透過_500.xcf
(+736 files in other folders)
